# python-intermediate-inflammation

./: CITATION.cff  index.html  inflammation-analysis.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_mkdoc.yml  main.yml
API/: index.html
docs/: index.md
inflammation/: compute_data.py  models.py  views.py
search/: search_index.json
site/: index.html  objects.inv
tests/: test_compute_data.py  test_models.py
